utilisation de l'API pour affichage de def

--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>mot</h1>
-    <h2>test</h2>
+    <h1>video game</h1>
+    <h2>movie</h2>
     <div id="reponse"></div>
 </body>
 <script src="index.js"></script>
