--- a/main.html
+++ b/main.html
@@ -7,6 +7,22 @@
     <title>Document</title>
 </head>
 <body>
+    <!DOCTYPE html>
+<html>
+<style>
+body {
+  font-size: 20px;
+}
+</style>
+<body>
+
+<span style='font-size:100px;'>&#129409;</span>
+<p>I will display &#129409;</p>
+<p>I will display &#x1F981;</p>
+
+</body>
+</html>
+
     <h1>video game</h1>
     <h2>movie</h2>
     <div id="reponse"></div>
